--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "axios": "^1.6.1",
     "chart.js": "^4.4.0",
     "faker": "^6.6.6",
+    "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/faker": "^6.6.9",
