--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@tabler/icons-react": "^2.40.0",
     "axios": "^1.6.1",
-    "formik": "^2.4.5",
     "chart.js": "^4.4.0",
     "faker": "^6.6.6",
+    "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -28,8 +28,10 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/faker": "^6.6.9",
@@ -41,8 +43,8 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.2.2",
     "redux-devtools-extension": "^2.13.9",
+    "typescript": "^5.2.2",
     "vite": "^4.4.5"
   }
 }
