--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
     "faker": "^6.6.6",
+    "file-saver": "^2.0.5",
+    "file-server": "^2.2.1",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
@@ -29,10 +31,12 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "redux": "^4.2.1",
+    "xlsx": "^0.18.5",
     "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/faker": "^6.6.9",
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
